re-enabling API template with cache-control:
